// @ts-ignore - PrismaClient is available at runtime but linter has cache issues
import type { PrismaClient } from '@prisma/client';
import { createGraphQLLogger } from '@repo/shared-logger';
import { 
  createNotificationsGrpcClient,
  type NotificationsGrpcClient,
  EventType as NotificationEventType,
  NotificationChannel,
  Priority as NotificationPriority
} from '@repo/grpc-sdk';

const logger = createGraphQLLogger('notification-event-handler');

/**
 * Handler –¥–ª—è —Å–æ–∑–¥–∞–Ω–∏—è —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–π –∏–∑ —Å–æ–±—ã—Ç–∏–π.
 * –°–æ–∑–¥–∞–µ—Ç Notification –∑–∞–ø–∏—Å–∏ –∏ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç –∏—Ö —á–µ—Ä–µ–∑ notifications-subgraph.
 */
export class NotificationEventHandler {
  private notificationsClient: NotificationsGrpcClient | null = null;
  
  constructor(private readonly prisma: PrismaClient) {
    // –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º gRPC –∫–ª–∏–µ–Ω—Ç –¥–ª—è notifications-subgraph
    const grpcHost = process.env.NOTIFICATIONS_GRPC_HOST || 'localhost';
    const grpcPort = parseInt(process.env.NOTIFICATIONS_GRPC_PORT || '4111');
    
    this.notificationsClient = createNotificationsGrpcClient({
      host: grpcHost,
      port: grpcPort,
      retryAttempts: 3,
      retryDelay: 1000,
      timeout: 10000,
    });
    
    // –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ (–Ω–µ –±–ª–æ–∫–∏—Ä—É–µ–º —Å—Ç–∞—Ä—Ç)
    this.notificationsClient.connect().catch((error) => {
      logger.warn('Failed to connect to notifications-subgraph gRPC', { error });
    });
  }
  
  async handle(event: any): Promise<void> {
    try {
      logger.info('üì® Creating notifications for event', { 
        eventId: event.id,
        type: event.type,
        targetUserIds: event.targetUserIds,
        targetUserIdsCount: event.targetUserIds?.length || 0
      });
      
      if (!event.targetUserIds || event.targetUserIds.length === 0) {
        logger.warn('‚ö†Ô∏è No target user IDs in event', { eventId: event.id });
        return;
      }
      
      // –î–ª—è –∫–∞–∂–¥–æ–≥–æ –∑–∞—Ç—Ä–æ–Ω—É—Ç–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
      let createdCount = 0;
      let skippedCount = 0;
      
      for (const userId of event.targetUserIds || []) {
        try {
          const created = await this.createNotificationForUser(event, userId);
          if (created) {
            createdCount++;
          } else {
            skippedCount++;
          }
        } catch (error: any) {
          logger.error('‚ùå Failed to create notification for user', {
            userId,
            error: error.message
          });
        }
      }
      
      logger.info('‚úÖ Notifications processing completed', { 
        eventId: event.id,
        created: createdCount,
        skipped: skippedCount,
        total: event.targetUserIds.length
      });
    } catch (error: any) {
      logger.error('‚ùå Failed to create notifications', { 
        eventId: event.id,
        error: error.message,
        stack: error.stack
      });
      throw error;
    }
  }
  
  private async createNotificationForUser(event: any, userId: string): Promise<boolean> {
    try {
      logger.info('üîç Processing notification for user', { userId, eventType: event.type });
      
      // –ó–∞–≥—Ä—É–∂–∞–µ–º –Ω–∞—Å—Ç—Ä–æ–π–∫–∏
      const settings = await this.prisma.userNotificationSettings.findUnique({
        where: { userId }
      });
      
      if (!settings) {
        logger.warn('‚ö†Ô∏è No notification settings found for user', { userId });
        return false;
      }
      
      logger.info('üìã User settings found', {
        userId,
        enabled: settings.enabled,
        subscribedEvents: settings.subscribedEvents,
        enabledChannels: settings.enabledChannels,
        hasTelegramChatId: !!settings.telegramChatId
      });
      
      if (!settings.enabled) {
        logger.warn('‚ö†Ô∏è Notifications disabled for user', { userId });
        return false;
      }
      
      if (!settings.subscribedEvents || !Array.isArray(settings.subscribedEvents)) {
        logger.warn('‚ö†Ô∏è No subscribed events array for user', { userId });
        return false;
      }

      if (event.type === 'CLEANING_READY_FOR_REVIEW' && !settings.subscribedEvents.includes('CLEANING_READY_FOR_REVIEW')) {
        const updatedEvents = [...settings.subscribedEvents, 'CLEANING_READY_FOR_REVIEW'];
        await this.prisma.userNotificationSettings.update({
          where: { userId },
          data: { subscribedEvents: updatedEvents },
        });
        settings.subscribedEvents = updatedEvents as any;
        logger.info('Auto-subscribed user to CLEANING_READY_FOR_REVIEW', { userId });
      }

      if (event.type === 'CLEANING_PRECHECK_COMPLETED' && !settings.subscribedEvents.includes('CLEANING_PRECHECK_COMPLETED')) {
        const updatedEvents = [...settings.subscribedEvents, 'CLEANING_PRECHECK_COMPLETED'];
        await this.prisma.userNotificationSettings.update({
          where: { userId },
          data: { subscribedEvents: updatedEvents },
        });
        settings.subscribedEvents = updatedEvents as any;
        logger.info('Auto-subscribed user to CLEANING_PRECHECK_COMPLETED', { userId });
      }
      
      // –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–æ–¥–ø–∏—Å–∫—É –Ω–∞ —Å–æ–±—ã—Ç–∏–µ (–±–µ–∑ –∞–≤—Ç–æ–ø–æ–¥–ø–∏—Å–∫–∏ - —É–ø—Ä–∞–≤–ª–µ–Ω–∏–µ —á–µ—Ä–µ–∑ UI)
      if (!settings.subscribedEvents.includes(event.type)) {
        logger.warn('‚ö†Ô∏è User not subscribed to event type', { 
          userId, 
          eventType: event.type,
          userSubscribedEvents: settings.subscribedEvents,
          hint: 'User needs to subscribe to this event type via UI'
        });
        return false;
      }
      
      // –†–µ–Ω–¥–µ—Ä–∏–º —Å–æ–æ–±—â–µ–Ω–∏–µ
      const rendered = this.renderNotification(event);
      const { title, message, actionUrl, actionButtons } = rendered;
      
      logger.info('Rendered notification', {
        eventType: event.type,
        hasActionButtons: !!actionButtons,
        actionButtonsCount: actionButtons?.length || 0,
        actionButtons: actionButtons,
        actionUrl: actionUrl,
      });
      
      // –°–æ–∑–¥–∞–µ–º Notification + Deliveries –≤ –æ–¥–Ω–æ–π —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏
      // –°–æ—Ö—Ä–∞–Ω—è–µ–º actionButtons –≤ metadata –¥–ª—è –ø–æ—Å–ª–µ–¥—É—é—â–µ–≥–æ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—è
      const metadataWithButtons = {
        ...event.payload,
        ...(actionButtons && actionButtons.length > 0 ? { actionButtons } : {})
      };
      
      const metadataString = JSON.stringify(metadataWithButtons);
      
      logger.info('Creating notification with metadata', {
        eventType: event.type,
        hasActionButtons: !!actionButtons,
        actionButtonsCount: actionButtons?.length || 0,
        metadataKeys: Object.keys(metadataWithButtons),
        metadataString: metadataString.substring(0, 200), // –ü–µ—Ä–≤—ã–µ 200 —Å–∏–º–≤–æ–ª–æ–≤ –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏
      });
      
      const notification = await (this.prisma.notification.create as any)({
        data: {
          userId,
          orgId: event.orgId || null,
          eventType: event.type,
          title,
          message,
          actionUrl: actionUrl || (actionButtons && actionButtons.length > 0 ? actionButtons[0].url : null),
          actionText: actionButtons && actionButtons.length > 0 ? actionButtons[0].text : '–û—Ç–∫—Ä—ã—Ç—å',
          priority: this.determinePriority(event.type) as any,
          status: 'PENDING',
          metadata: metadataString,
          
          // –°–æ–∑–¥–∞–µ–º deliveries —Å—Ä–∞–∑—É
          deliveryStatuses: {
            create: this.createDeliveries(settings, userId)
          },
          
          // –°–æ–∑–¥–∞–µ–º —Å–≤—è–∑—å —Å —Å–æ–±—ã—Ç–∏–µ–º —Å—Ä–∞–∑—É
          eventLinks: {
            create: {
              eventId: event.id
            }
          }
        },
        include: {
          deliveryStatuses: true,
          eventLinks: true
        }
      });
      
      logger.info('‚úÖ Notification created with deliveries and event link', { 
        notificationId: notification.id,
        userId,
        eventType: event.type,
        deliveriesCount: (notification.deliveryStatuses as any[])?.length || 0,
        eventLinksCount: (notification.eventLinks as any[])?.length || 0
      });
      
      // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ —á–µ—Ä–µ–∑ notifications-subgraph gRPC
      // notifications-subgraph —Å–æ–∑–¥–∞—Å—Ç —Å–≤–æ–µ —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ –∏ –æ—Ç–ø—Ä–∞–≤–∏—Ç —á–µ—Ä–µ–∑ –ø—Ä–æ–≤–∞–π–¥–µ—Ä—ã
      await this.sendNotificationToProviders(event, notification, settings, userId);
      
      return true;
      
    } catch (error: any) {
      logger.error('‚ùå Failed to create notification for user', { 
        userId,
        error: error.message,
        stack: error.stack
      });
      return false;
    }
  }
  
  /**
   * –û—Ç–ø—Ä–∞–≤–∏—Ç—å —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ —á–µ—Ä–µ–∑ notifications-subgraph gRPC
   */
  private async sendNotificationToProviders(event: any, notification: any, settings: any, userId: string): Promise<void> {
    if (!this.notificationsClient) {
      logger.warn('Notifications gRPC client not initialized');
      return;
    }

    try {
      // –ú–∞–ø–ø–∏–Ω–≥ —Ç–∏–ø–æ–≤ —Å–æ–±—ã—Ç–∏–π –∏–∑ events –≤ notifications
      const eventTypeMap: Record<string, NotificationEventType> = {
        // Booking events
        'BOOKING_CREATED': NotificationEventType.EVENT_TYPE_BOOKING_CREATED,
        'BOOKING_CONFIRMED': NotificationEventType.EVENT_TYPE_BOOKING_CONFIRMED,
        'BOOKING_CANCELLED': NotificationEventType.EVENT_TYPE_BOOKING_CANCELLED,
        'BOOKING_CHECKIN': NotificationEventType.EVENT_TYPE_BOOKING_CHECKIN,
        'BOOKING_CHECKOUT': NotificationEventType.EVENT_TYPE_BOOKING_CHECKOUT,
        // Cleaning events
        'CLEANING_AVAILABLE': NotificationEventType.EVENT_TYPE_CLEANING_AVAILABLE,
        'CLEANING_ASSIGNED': NotificationEventType.EVENT_TYPE_CLEANING_ASSIGNED,
        'CLEANING_STARTED': NotificationEventType.EVENT_TYPE_CLEANING_STARTED,
        'CLEANING_COMPLETED': NotificationEventType.EVENT_TYPE_CLEANING_COMPLETED,
        'CLEANING_READY_FOR_REVIEW': NotificationEventType.EVENT_TYPE_CLEANING_READY_FOR_REVIEW,
        'CLEANING_CANCELLED': NotificationEventType.EVENT_TYPE_CLEANING_CANCELLED,
        'CLEANING_PRECHECK_COMPLETED': NotificationEventType.EVENT_TYPE_CLEANING_PRECHECK_COMPLETED,
        // Task events
        'TASK_CREATED': NotificationEventType.EVENT_TYPE_TASK_CREATED,
        'TASK_ASSIGNED': NotificationEventType.EVENT_TYPE_TASK_ASSIGNED,
        'TASK_STATUS_CHANGED': NotificationEventType.EVENT_TYPE_TASK_STATUS_CHANGED,
        'TASK_COMPLETED': NotificationEventType.EVENT_TYPE_TASK_COMPLETED,
        // Payment events
        'PAYMENT_RECEIVED': NotificationEventType.EVENT_TYPE_PAYMENT_RECEIVED,
        'PAYMENT_FAILED': NotificationEventType.EVENT_TYPE_PAYMENT_FAILED,
        'INVOICE_CREATED': NotificationEventType.EVENT_TYPE_INVOICE_CREATED,
        'INVOICE_OVERDUE': NotificationEventType.EVENT_TYPE_INVOICE_OVERDUE,
        // System events
        'USER_REGISTERED': NotificationEventType.EVENT_TYPE_USER_REGISTERED,
        'USER_LOGIN': NotificationEventType.EVENT_TYPE_USER_LOGIN,
        'SYSTEM_ALERT': NotificationEventType.EVENT_TYPE_SYSTEM_ALERT,
      };

      // –ú–∞–ø–ø–∏–Ω–≥ –ø—Ä–∏–æ—Ä–∏—Ç–µ—Ç–æ–≤
      const priorityMap: Record<string, NotificationPriority> = {
        'LOW': NotificationPriority.PRIORITY_LOW,
        'NORMAL': NotificationPriority.PRIORITY_NORMAL,
        'HIGH': NotificationPriority.PRIORITY_HIGH,
        'URGENT': NotificationPriority.PRIORITY_URGENT,
      };

      // –ú–∞–ø–ø–∏–Ω–≥ –∫–∞–Ω–∞–ª–æ–≤
      const channels: NotificationChannel[] = [];
      if (settings.enabledChannels.includes('TELEGRAM') && settings.telegramChatId) {
        channels.push(NotificationChannel.CHANNEL_TELEGRAM);
      }
      if (settings.enabledChannels.includes('WEBSOCKET')) {
        channels.push(NotificationChannel.CHANNEL_WEBSOCKET);
      }

      if (channels.length === 0) {
        logger.info('No enabled channels for notification', { userId });
        return;
      }

      const grpcEventType = eventTypeMap[notification.eventType];
      
      // –ü—Ä–æ–ø—É—Å–∫–∞–µ–º —Å–æ–±—ã—Ç–∏—è, –∫–æ—Ç–æ—Ä—ã—Ö –Ω–µ—Ç –≤ –º–∞–ø–ø–∏–Ω–≥–µ
      if (!grpcEventType) {
        logger.info('‚è≠Ô∏è Skipping notification - event type not mapped', {
          notificationId: notification.id,
          eventType: notification.eventType,
          hint: 'This event type is no longer supported or has been replaced'
        });
        return;
      }
      
      const grpcPriority = priorityMap[notification.priority] || NotificationPriority.PRIORITY_NORMAL;

      // –ò–∑–≤–ª–µ–∫–∞–µ–º actionButtons –∏–∑ metadata –µ—Å–ª–∏ –æ–Ω–∏ –µ—Å—Ç—å
      let parsedMetadata: any = {};
      let actionButtons: Array<{ text: string; url: string; useWebApp?: boolean }> | undefined = undefined;
      
      logger.info('Parsing notification metadata', {
        notificationId: notification.id,
        metadata: notification.metadata,
        metadataType: typeof notification.metadata,
      });
      
      try {
        parsedMetadata = JSON.parse(notification.metadata || '{}');
        actionButtons = parsedMetadata.actionButtons;
        logger.info('Parsed metadata successfully', {
          notificationId: notification.id,
          parsedMetadataKeys: Object.keys(parsedMetadata),
          hasActionButtons: !!parsedMetadata.actionButtons,
          actionButtonsCount: parsedMetadata.actionButtons?.length || 0,
          actionButtons: parsedMetadata.actionButtons,
        });
      } catch (e) {
        logger.error('Failed to parse metadata', {
          notificationId: notification.id,
          error: e instanceof Error ? e.message : String(e),
          metadata: notification.metadata,
        });
        // metadata —É–∂–µ –≤ –≤–∏–¥–µ —Å—Ç—Ä–æ–∫–∏
      }
      
      logger.info('Extracted actionButtons from notification', {
        notificationId: notification.id,
        hasActionButtons: !!actionButtons,
        actionButtonsCount: actionButtons?.length || 0,
        actionButtons: actionButtons,
        parsedMetadata: parsedMetadata,
      });
      
      // –î–ª—è –æ–±—Ä–∞—Ç–Ω–æ–π —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏ –∏—Å–ø–æ–ª—å–∑—É–µ–º actionUrl/actionText –µ—Å–ª–∏ –Ω–µ—Ç actionButtons
      const hasActionButtons = actionButtons && actionButtons.length > 0;
      
      logger.info('üì§ Sending notification via gRPC', {
        notificationId: notification.id,
        userId,
        eventType: notification.eventType,
        channels: channels.map(c => NotificationChannel[c]),
        hasActionButtons: hasActionButtons,
        actionButtonsCount: actionButtons?.length || 0,
        actionButtons: actionButtons,
      });
      
      // –§–æ—Ä–º–∏—Ä—É–µ–º –ø–∞—Ä–∞–º–µ—Ç—Ä—ã –¥–ª—è sendNotification
      const sendParams: any = {
        eventType: grpcEventType,
        orgId: notification.orgId || undefined,
        recipientIds: [userId], // notifications-subgraph —Å–∞–º –Ω–∞–π–¥–µ—Ç telegramChatId
        channels,
        priority: grpcPriority,
        title: notification.title,
        message: notification.message,
        metadata: notification.metadata || undefined,
      };
      
      // –ò—Å–ø–æ–ª—å–∑—É–µ–º actionButtons –µ—Å–ª–∏ –µ—Å—Ç—å, –∏–Ω–∞—á–µ actionUrl/actionText –¥–ª—è –æ–±—Ä–∞—Ç–Ω–æ–π —Å–æ–≤–º–µ—Å—Ç–∏–º–æ—Å—Ç–∏
      if (hasActionButtons && actionButtons) {
        sendParams.actionButtons = actionButtons.map(btn => ({
          text: btn.text,
          url: btn.url,
          useWebApp: btn.useWebApp ?? false
        }));
      } else {
        sendParams.actionUrl = notification.actionUrl || undefined;
        sendParams.actionText = notification.actionText || undefined;
      }
      
      await this.notificationsClient.sendNotification(sendParams);

      logger.info('‚úÖ Notification sent via gRPC', { notificationId: notification.id });
    } catch (error: any) {
      logger.error('‚ùå Failed to send notification via gRPC', {
        notificationId: notification.id,
        error: error.message,
      });
      // –ù–µ –ø—Ä–µ—Ä—ã–≤–∞–µ–º –æ—Å–Ω–æ–≤–Ω–æ–π flow - —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ —É–∂–µ —Å–æ–∑–¥–∞–Ω–æ –≤ –ë–î
    }
  }

  /**
   * –°–æ–∑–¥–∞—Ç—å deliveries –Ω–∞ –æ—Å–Ω–æ–≤–µ –Ω–∞—Å—Ç—Ä–æ–µ–∫ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
   */
  private createDeliveries(settings: any, userId: string): any[] {
    const deliveries = [];
    
    if (settings.enabledChannels.includes('TELEGRAM') && settings.telegramChatId) {
      deliveries.push({
        channel: 'TELEGRAM',
        recipientType: 'TELEGRAM_CHAT_ID',
        recipientId: settings.telegramChatId,
        status: 'PENDING'
      });
    }
    
    if (settings.enabledChannels.includes('WEBSOCKET')) {
      deliveries.push({
        channel: 'WEBSOCKET',
        recipientType: 'USER_ID',
        recipientId: userId,
        status: 'PENDING'
      });
    }
    
    return deliveries;
  }
  
  private renderNotification(event: any): { 
    title: string; 
    message: string; 
    actionUrl?: string; 
    actionButtons?: Array<{ text: string; url: string; useWebApp?: boolean }> 
  } {
    const payload = event.payload;
    const frontendUrl = process.env.FRONTEND_URL || 'http://localhost:3000';
    const useWebApp = process.env.TELEGRAM_USE_MINIAPP === 'true';
    
    switch (event.type) {
      case 'CLEANING_ASSIGNED':
        // –ï—Å–ª–∏ —É–±–æ—Ä—â–∏–∫ –Ω–∞–∑–Ω–∞—á–µ–Ω - —Ç–æ–ª—å–∫–æ –æ–¥–Ω–∞ –∫–Ω–æ–ø–∫–∞ "–ü–æ—Å–º–æ—Ç—Ä–µ—Ç—å —É–±–æ—Ä–∫—É"
        return {
          title: 'üßπ –ù–æ–≤–∞—è —É–±–æ—Ä–∫–∞ –Ω–∞–∑–Ω–∞—á–µ–Ω–∞!',
          message: `–í–∞–º –Ω–∞–∑–Ω–∞—á–µ–Ω–∞ —É–±–æ—Ä–∫–∞ –≤ ${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä–µ'}`,
          actionUrl: `${frontendUrl}/cleanings/${payload.cleaningId}`
        };
      
      case 'CLEANING_AVAILABLE':
        // –§–æ—Ä–º–∞—Ç–∏—Ä—É–µ–º –¥–∞—Ç—É –¥–ª—è –∫—Ä–∞—Å–∏–≤–æ–≥–æ –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏—è
        const scheduledDate = payload.scheduledAt 
          ? new Date(payload.scheduledAt).toLocaleString('ru-RU', {
              day: 'numeric',
              month: 'long',
              year: 'numeric',
              hour: '2-digit',
              minute: '2-digit'
            })
          : '–Ω–µ —É–∫–∞–∑–∞–Ω–∞';
        
        // –ï—Å–ª–∏ —É–±–æ—Ä–∫–∞ –¥–æ—Å—Ç—É–ø–Ω–∞ (–Ω–µ –Ω–∞–∑–Ω–∞—á–µ–Ω–∞) - –¥–≤–µ –∫–Ω–æ–ø–∫–∏: "–í–∑—è—Ç—å —É–±–æ—Ä–∫—É" –∏ "–ü–æ—Å–º–æ—Ç—Ä–µ—Ç—å —É–±–æ—Ä–∫—É"
        return {
          title: 'üìã –î–æ—Å—Ç—É–ø–Ω–∞ —É–±–æ—Ä–∫–∞!',
          message: `–ó–∞–ø–ª–∞–Ω–∏—Ä–æ–≤–∞–Ω–∞ —É–±–æ—Ä–∫–∞ –≤ –∫–≤–∞—Ä—Ç–∏—Ä–µ "${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä–µ'}"

–î–∞—Ç–∞: ${scheduledDate}

üí° –ù–∞–∂–º–∏—Ç–µ –∫–Ω–æ–ø–∫—É –Ω–∏–∂–µ, —á—Ç–æ–±—ã –≤–∑—è—Ç—å —É–±–æ—Ä–∫—É –≤ —Ä–∞–±–æ—Ç—É`,
          actionButtons: [
            {
              text: '‚úÖ –í–∑—è—Ç—å —É–±–æ—Ä–∫—É',
              url: `${frontendUrl}/cleanings/${payload.cleaningId}?action=assign`,
              useWebApp
            },
            {
              text: 'üëÄ –ü–æ—Å–º–æ—Ç—Ä–µ—Ç—å —É–±–æ—Ä–∫—É',
              url: `${frontendUrl}/cleanings/${payload.cleaningId}`,
              useWebApp
            }
          ]
        };
      
      case 'CLEANING_STARTED':
        return {
          title: '‚ñ∂Ô∏è –£–±–æ—Ä–∫–∞ –Ω–∞—á–∞–ª–∞—Å—å',
          message: `–£–±–æ—Ä–∫–∞ –≤ ${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä–µ'} –Ω–∞—á–∞—Ç–∞`,
          actionUrl: `${frontendUrl}/cleanings/${payload.cleaningId}`
        };
      
      case 'CLEANING_COMPLETED':
        return {
          title: '‚úÖ –£–±–æ—Ä–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞',
          message: `–£–±–æ—Ä–∫–∞ –≤ ${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä–µ'} —É—Å–ø–µ—à–Ω–æ –∑–∞–≤–µ—Ä—à–µ–Ω–∞`,
          actionUrl: `${frontendUrl}/cleanings/${payload.cleaningId}`
        };

      case 'CLEANING_PRECHECK_COMPLETED':
        return {
          title: 'üßæ –ü—Ä–∏—ë–º–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞',
          message: `–ü—Ä–∏—ë–º–∫–∞ —É–±–æ—Ä–∫–∏ –≤ ${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä–µ'} –∑–∞–≤–µ—Ä—à–µ–Ω–∞.`,
          actionUrl: `${frontendUrl}/cleanings/${payload.cleaningId}`
        };
      
      case 'CLEANING_CANCELLED':
        return {
          title: '‚ùå –£–±–æ—Ä–∫–∞ –æ—Ç–º–µ–Ω–µ–Ω–∞',
          message: `–£–±–æ—Ä–∫–∞ –≤ ${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä–µ'} –±—ã–ª–∞ –æ—Ç–º–µ–Ω–µ–Ω–∞`,
          actionUrl: `${frontendUrl}/cleanings`
        };
      
      // Booking events
      case 'BOOKING_CREATED':
        return {
          title: 'üìÖ –ù–æ–≤–æ–µ –±—Ä–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ',
          message: `–°–æ–∑–¥–∞–Ω–æ –±—Ä–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ #${payload.bookingId || 'N/A'}${payload.guestName ? `\n–ì–æ—Å—Ç—å: ${payload.guestName}` : ''}`,
          actionUrl: `${frontendUrl}/bookings/${payload.bookingId}`
        };
      
      case 'BOOKING_CONFIRMED':
        return {
          title: '‚úÖ –ë—Ä–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ –ø–æ–¥—Ç–≤–µ—Ä–∂–¥–µ–Ω–æ',
          message: `–ë—Ä–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ #${payload.bookingId || 'N/A'} –ø–æ–¥—Ç–≤–µ—Ä–∂–¥–µ–Ω–æ`,
          actionUrl: `${frontendUrl}/bookings/${payload.bookingId}`
        };
      
      case 'BOOKING_CANCELLED':
        return {
          title: '‚ùå –ë—Ä–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ –æ—Ç–º–µ–Ω–µ–Ω–æ',
          message: `–ë—Ä–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ #${payload.bookingId || 'N/A'} –æ—Ç–º–µ–Ω–µ–Ω–æ`,
          actionUrl: `${frontendUrl}/bookings/${payload.bookingId}`
        };
      
      case 'BOOKING_CHECKIN':
        return {
          title: 'üè† –ì–æ—Å—Ç—å –∑–∞—Å–µ–ª–∏–ª—Å—è',
          message: `–ó–∞—Å–µ–ª–µ–Ω–∏–µ –≥–æ—Å—Ç—è –≤ ${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä–µ'}`,
          actionUrl: `${frontendUrl}/bookings/${payload.bookingId}`
        };
      
      case 'BOOKING_CHECKOUT':
        return {
          title: 'üö™ –ì–æ—Å—Ç—å –≤—ã—Å–µ–ª–∏–ª—Å—è',
          message: `–í—ã—Å–µ–ª–µ–Ω–∏–µ –≥–æ—Å—Ç—è –∏–∑ ${payload.unitName || '–∫–≤–∞—Ä—Ç–∏—Ä—ã'}`,
          actionUrl: `${frontendUrl}/bookings/${payload.bookingId}`
        };
      
      // Task events
      case 'TASK_CREATED':
        return {
          title: 'üìã –ù–æ–≤–∞—è –∑–∞–¥–∞—á–∞',
          message: `–°–æ–∑–¥–∞–Ω–∞ –∑–∞–¥–∞—á–∞: ${payload.taskName || payload.title || '–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è'}`,
          actionUrl: `${frontendUrl}/tasks/${payload.taskId}`
        };
      
      case 'TASK_ASSIGNED':
        return {
          title: 'üë§ –ó–∞–¥–∞—á–∞ –Ω–∞–∑–Ω–∞—á–µ–Ω–∞',
          message: `–í–∞–º –Ω–∞–∑–Ω–∞—á–µ–Ω–∞ –∑–∞–¥–∞—á–∞: ${payload.taskName || payload.title || '–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è'}`,
          actionUrl: `${frontendUrl}/tasks/${payload.taskId}`
        };
      
      case 'TASK_STATUS_CHANGED':
        return {
          title: 'üîÑ –°—Ç–∞—Ç—É—Å –∑–∞–¥–∞—á–∏ –∏–∑–º–µ–Ω–µ–Ω',
          message: `–ó–∞–¥–∞—á–∞ "${payload.taskName || payload.title || '–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è'}" ‚Üí ${payload.status || '–Ω–æ–≤—ã–π —Å—Ç–∞—Ç—É—Å'}`,
          actionUrl: `${frontendUrl}/tasks/${payload.taskId}`
        };
      
      case 'TASK_COMPLETED':
        return {
          title: '‚úÖ –ó–∞–¥–∞—á–∞ –≤—ã–ø–æ–ª–Ω–µ–Ω–∞',
          message: `–ó–∞–¥–∞—á–∞ "${payload.taskName || payload.title || '–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è'}" –≤—ã–ø–æ–ª–Ω–µ–Ω–∞`,
          actionUrl: `${frontendUrl}/tasks/${payload.taskId}`
        };
      
      // Payment events
      case 'PAYMENT_RECEIVED':
        return {
          title: 'üí∞ –ü–ª–∞—Ç–µ–∂ –ø–æ–ª—É—á–µ–Ω',
          message: `–ü–æ–ª—É—á–µ–Ω –ø–ª–∞—Ç–µ–∂ ${payload.amount ? `–Ω–∞ —Å—É–º–º—É ${payload.amount}` : ''}${payload.currency ? ` ${payload.currency}` : ''}${payload.bookingId ? `\n–ë—Ä–æ–Ω–∏—Ä–æ–≤–∞–Ω–∏–µ #${payload.bookingId}` : ''}`,
          actionUrl: payload.bookingId ? `${frontendUrl}/bookings/${payload.bookingId}` : `${frontendUrl}/payments`
        };
      
      case 'PAYMENT_FAILED':
        return {
          title: '‚ùå –ü–ª–∞—Ç–µ–∂ –Ω–µ –ø—Ä–æ—à–µ–ª',
          message: `–ü–ª–∞—Ç–µ–∂ ${payload.amount ? `–Ω–∞ —Å—É–º–º—É ${payload.amount}` : ''}${payload.currency ? ` ${payload.currency}` : ''} –Ω–µ —É–¥–∞–ª–æ—Å—å –ø—Ä–æ–≤–µ—Å—Ç–∏`,
          actionUrl: `${frontendUrl}/payments`
        };
      
      case 'INVOICE_CREATED':
        return {
          title: 'üìÑ –°—á–µ—Ç —Å–æ–∑–¥–∞–Ω',
          message: `–°–æ–∑–¥–∞–Ω —Å—á–µ—Ç ${payload.invoiceNumber || ''}${payload.amount ? `\n–°—É–º–º–∞: ${payload.amount}${payload.currency ? ` ${payload.currency}` : ''}` : ''}`,
          actionUrl: `${frontendUrl}/invoices/${payload.invoiceId}`
        };
      
      case 'INVOICE_OVERDUE':
        return {
          title: '‚ö†Ô∏è –°—á–µ—Ç –ø—Ä–æ—Å—Ä–æ—á–µ–Ω',
          message: `–°—á–µ—Ç ${payload.invoiceNumber || ''} –ø—Ä–æ—Å—Ä–æ—á–µ–Ω${payload.amount ? `\n–°—É–º–º–∞: ${payload.amount}${payload.currency ? ` ${payload.currency}` : ''}` : ''}`,
          actionUrl: `${frontendUrl}/invoices/${payload.invoiceId}`
        };
      
      // System events
      case 'USER_REGISTERED':
        return {
          title: 'üëã –î–æ–±—Ä–æ –ø–æ–∂–∞–ª–æ–≤–∞—Ç—å!',
          message: `–†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –ø—Ä–æ—à–ª–∞ —É—Å–ø–µ—à–Ω–æ. –î–æ–±—Ä–æ –ø–æ–∂–∞–ª–æ–≤–∞—Ç—å –≤ —Å–∏—Å—Ç–µ–º—É!`,
          actionUrl: `${frontendUrl}/profile`
        };
      
      case 'USER_LOGIN':
        return {
          title: 'üîê –í—Ö–æ–¥ –≤ —Å–∏—Å—Ç–µ–º—É',
          message: `–í—ã–ø–æ–ª–Ω–µ–Ω –≤—Ö–æ–¥ –≤ —Å–∏—Å—Ç–µ–º—É${payload.ipAddress ? ` —Å IP ${payload.ipAddress}` : ''}`,
          actionUrl: `${frontendUrl}/security`
        };
      
      case 'SYSTEM_ALERT':
        return {
          title: '‚ö†Ô∏è –°–∏—Å—Ç–µ–º–Ω–æ–µ –æ–ø–æ–≤–µ—â–µ–Ω–∏–µ',
          message: payload.message || payload.description || '–°–∏—Å—Ç–µ–º–Ω–æ–µ –æ–ø–æ–≤–µ—â–µ–Ω–∏–µ',
          actionUrl: frontendUrl
        };
      
      default:
        return {
          title: event.type.replace(/_/g, ' '),
          message: `–°–æ–±—ã—Ç–∏–µ: ${event.type}`,
          actionUrl: frontendUrl
        };
    }
  }
  
  private determinePriority(eventType: string): string {
    switch (eventType) {
      // High priority - urgent actions required
      case 'CLEANING_ASSIGNED':
      case 'CLEANING_AVAILABLE':
      case 'TASK_ASSIGNED':
      case 'PAYMENT_FAILED':
      case 'INVOICE_OVERDUE':
        return 'HIGH';
      
      // Normal priority - important events
      case 'CLEANING_STARTED':
      case 'CLEANING_PRECHECK_COMPLETED':
      case 'CLEANING_CANCELLED':
      case 'BOOKING_CREATED':
      case 'BOOKING_CONFIRMED':
      case 'BOOKING_CANCELLED':
      case 'BOOKING_CHECKIN':
      case 'BOOKING_CHECKOUT':
      case 'TASK_CREATED':
      case 'TASK_STATUS_CHANGED':
      case 'PAYMENT_RECEIVED':
      case 'INVOICE_CREATED':
        return 'NORMAL';
      
      // Low priority - informational events
      case 'CLEANING_COMPLETED':
      case 'TASK_COMPLETED':
      case 'USER_REGISTERED':
      case 'USER_LOGIN':
        return 'LOW';
      
      // Urgent priority - critical system events
      case 'SYSTEM_ALERT':
        return 'URGENT';
      
      default:
        return 'NORMAL';
    }
  }
}

